Add css for enter box

--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 <body>
     
     <div class="container">
-        
+        <p>Enter your name or URL</p>
+        <input type="text" id="text-input" placeholder="Enter text or URL">
+        <button id="generate-btn">Generate QR Code</button>
+        <div id="qrcode"></div>
     </div>
+
+
 
 </body>
 </html>
