--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
-    <script src="script.js"></script>
+    <script src="home.js"></script>
 
 </body>
 </html>
